src/css/weather.css
.weather {
    font-family: 'M PLUS Rounded 1c', sans-serif;
}

.weather-search {
    align-self: center;
    display: flex;
    align-items: center;
    height: 120px;
}

.weather-initial-bar {
    display: flex;
    flex-direction: column-reverse;
    width: 480px;
}

.text:hover {
    box-shadow: 0px 0px 8px #6590FD;
    transform: scale(1.01);
    border-radius: 4px;
}

.weather-search-bar {
    display: flex;
    flex-direction: column-reverse;
    width: 310px;
}

.weather-again {
    height: 120px;
    display: flex;
    align-items: center;
}

.weather-button {
    outline: none;
    background-color: #6590FD;
    font-family: 'M PLUS Rounded 1c', sans-serif;
    font-weight: bold;
    border: none;
    color: white;
    height: 50px;
    padding-left: 16px;
    padding-right: 16px;
    font-size: 24px;
    border-radius: 8px;
    margin-left: 32px;
}

.weather-button:hover {
    cursor: pointer;
}

.weather-error {
    color: #F04141;
    font-size: 16px;
    opacity: 0.98;
    margin-top: 8px;
}

.weather-input {
    font-size: 24px;
    outline: none;
    font-family: 'M PLUS Rounded 1c', sans-serif;
    border: solid 3px black 0.08;
    border-top: none;
    border-left: none;
    border-right: none;
}

.weather-input:focus {
    border: solid 3px black;
    border-top: none;
    border-left: none;
    border-right: none;
}

.weather-input:focus + .weather-label {
    visibility: visible;
    opacity: 0.38;
}

.weather-label {
    visibility: hidden;
}

::placeholder {
    opacity: 0.38;
}

.icon {
    background-color: white;
}

.weather-location {
    display: flex;
}

.weather-card {
    padding-left: 8vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.25);
    border-radius: 0px 16px 16px 0px;
    margin-top: 100px;
    margin-bottom: 100px;
    margin-right: 150px;
}

.weather-result {
    width: 100vw;
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    border: solid green 1px;
}

.weather-video {
    border: solid red 3px;
}

.weather-value, .weather-location {
    margin-top: 24px;
    display: flex;
    width: 400px;
    justify-content: space-between;
    font-size: 16px;
}

.weather-location {
    align-items: baseline;
}

.weather-location-time {
    opacity: 0.38;
    font-size: 12px;
}

.weather-location-name {
    font-weight: bold;
    font-size: 32px;
}

